--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "three": "^0.168.0"
   },
   "devDependencies": {
+    "@types/three": "^0.168.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "file-loader": "^6.2.0"
